add function to view list of comments associated with an article

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ h1 {
   justify-content: flex-end;
 }
 
-ul {
+.articleList {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
