--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body {
+  text-align: center;
+  background-color: #cfbff7;
+}
+
 h1 {
   text-align: center;
 }
@@ -18,6 +23,7 @@ h1 {
   margin-bottom: 20px;
   gap: 5px;
   justify-content: flex-end;
+  background-color: #6cd4ff;
 }
 
 .articleList {
@@ -36,4 +42,49 @@ img {
   border-radius: 5px;
   max-width: 100%;
   height: auto;
+}
+
+.comment {
+  background-color: #8b80f9;
+  border-radius: 5px;
+}
+
+.author-comment {
+  text-align: left;
+}
+
+.vote-comment {
+  text-align: right;
+}
+
+.comment-input {
+  padding: 30px;
+  width: 75%;
+}
+
+.comment-input:focus {
+  border-color: #6cd4ff;
+  outline: none;
+}
+
+.comment-submit {
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.comment-submit:hover {
+  background-color: #6cd4ff;
+  color: white;
+  border: none;
+}
+
+.select-user {
+  padding: 8px;
+  margin: 5px;
+  border-radius: 5px;
+}
+.select-user:focus {
+  border-color: #6cd4ff;
 }
